add cqv4 test dataset and unit test